[package]
name = "tire_monitor"
version = "0.1.2"
edition = "2024"
publish = ["kellnr"]

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-serde = { version = "0.9.0", features = ["bincode"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
futures-util = { version = "0.3", features = ["sink"] }
bincode = { version = "2.0.1", features = ["serde"] }
tire_monitor_messages = { path = "./tire_monitor_messages", version = "0.3.0", registry = "kellnr" }
futures = "0.3.31"
anyhow = "1.0.98"
bytes = "1.10.1"

[workspace]
members = ["tire_monitor_messages"]
